tests/ui/async-await/async-closures/is-not-fn.stderr
error[E0277]: expected a `FnOnce()` closure, found `{coroutine-closure@$DIR/is-not-fn.rs:7:14: 7:22}`
  --> $DIR/is-not-fn.rs:7:14
   |
LL |     needs_fn(async || {});
   |     -------- ^^^^^^^^^^^ expected an `FnOnce()` closure, found `{coroutine-closure@$DIR/is-not-fn.rs:7:14: 7:22}`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnOnce<()>` is not implemented for `{coroutine-closure@$DIR/is-not-fn.rs:7:14: 7:22}`
   = note: wrap the `{coroutine-closure@$DIR/is-not-fn.rs:7:14: 7:22}` in a closure with no arguments: `|| { /* code */ }`
note: required by a bound in `needs_fn`
  --> $DIR/is-not-fn.rs:6:25
   |
LL |     fn needs_fn(x: impl FnOnce()) {}
   |                         ^^^^^^^^ required by this bound in `needs_fn`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
